rgw: enable RGWReshard thread on any zone that supports it

enable the background dynamic resharding thread based on
RGWSI_Zone::can_reshard(), which takes the zonegroup features into
account

Fixes: https://tracker.ceph.com/issues/52877

Signed-off-by: Casey Bodley <cbodley@redhat.com>